--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -9,6 +9,7 @@
 @import "button";
 @import "columns";
 @import "container";
+@import "cover";
 @import "decor";
 @import "editor";
 @import "footer-info";
@@ -22,6 +23,7 @@
 @import "main";
 @import "nav";
 @import "nav-slider";
+@import "progressbar";
 @import "section";
 @import "shift";
 @import "slider";
