--- a/src/includes/section-partners.html
+++ b/src/includes/section-partners.html
@@ -66,6 +66,7 @@
                         </a>
                     </div>
                 </div>
+                <div class="slider__progressbar progressbar"></div>
             </div>
         </div>
 
