--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -1,12 +1,12 @@
 .body {
     display: flex;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 1.7;
     font-weight: 400;
     min-height: 100vh;
     overflow-x: hidden;
     color: $blue-primary;
-    padding-top: rem(76);
+    //padding-top: rem(76);
     flex-direction: column;
     font-family: $font-main;
     background-color: $white-bg;
