--- a/src/styles/blocks/columns.scss
+++ b/src/styles/blocks/columns.scss
@@ -34,6 +34,119 @@
         }
     }
 
+    &--projects-grid {
+        .columns__col {
+            min-height: rem(400);
+
+            @include r(1300) {
+                min-height: rem(315);
+            }
+
+            @include r(1000) {
+                min-height: rem(215);
+            }
+
+            @include r(700) {
+                min-height: rem(160);
+            }
+
+            &:nth-child(10n + 1) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 2;
+                }
+            }
+
+            &:nth-child(10n + 2) {
+                grid-column: span 8;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 3) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 4) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 5) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 2;
+                }
+            }
+
+            &:nth-child(10n + 6) {
+                grid-column: span 8;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 7) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 8) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n + 9) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+
+            &:nth-child(10n) {
+                grid-column: span 4;
+
+                @include r(700) {
+                    grid-column: span 1;
+                }
+            }
+        }
+    }
+
+    &--services-grid {
+        .columns__col {
+            grid-column: span 4;
+            min-height: rem(320);
+
+            @include r(1000) {
+                grid-column: span 6;
+            }
+
+            @include r(700) {
+                grid-column: span 2;
+            }
+        }
+    }
+
     &__col {
         position: relative;
 
