--- a/src/styles/blocks/decor.scss
+++ b/src/styles/blocks/decor.scss
@@ -43,4 +43,22 @@
             }
         }
     }
+
+    &-3 {
+        &:after {
+            left: 0;
+            right: 0;
+            bottom: 0;
+            content: "";
+            display: block;
+            height: rem(250);
+            position: absolute;
+            background-color: $gray-bg;
+
+            @include r(700) {
+                height: rem(325);
+            }
+        }
+
+    }
 }
