--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,6 +7,24 @@
         gap: rem(12);
     }
 
+    &.invert {
+        color: $text-white;
+
+        .nav__link {
+            &:after {
+                background-color: $text-white;
+            }
+
+            //&:hover {
+            //    color: $text-white;
+            //}
+        }
+
+        .nav__icon {
+            fill: $text-white;
+        }
+    }
+
     &--header {
         padding: 0 rem(8);
 
@@ -17,11 +35,13 @@
 
     &__item {
         position: relative;
+
         &.active {
             .nav {
                 &__icon {
                     transform: rotate(180deg);
                 }
+
                 &__dropdown {
                     opacity: 1;
                     height: auto;
@@ -36,6 +56,7 @@
         color: inherit;
         height: rem(24);
         font-size: rem(12);
+        position: relative;
         align-items: center;
         text-decoration: none;
 
@@ -67,7 +88,7 @@
                 font-family: inherit;
 
                 &:hover {
-                    color: $blue-primary;
+                    //color: $blue-primary;
                 }
             }
         }
@@ -83,6 +104,7 @@
         width: rem(24);
         height: rem(24);
     }
+
     &__dropdown {
         height: 0;
         z-index: 1;
@@ -107,12 +129,29 @@
         color: $blue-primary;
         text-decoration: none;
         padding: rem(8) rem(16);
+
         &:hover {
             background-color: $gray-bg;
         }
 
         &:active {
 
+        }
+    }
+}
+
+.section.fixed {
+    .nav {
+        &__link {
+            color: $blue-primary;
+
+            &:after {
+                background-color: $blue-primary;
+            }
+        }
+
+        &__icon {
+            fill: $blue-primary;
         }
     }
 }
