--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -22,13 +22,29 @@
 
             }
 
-            @include r(700) {
-
-            }
-
             @include r(770) {
                 width: rem(335);
             }
+        }
+    }
+
+    &__progressbar {
+        display: none;
+        visibility: hidden;
+
+        &--20 {
+            margin-top: rem(20);
+        }
+
+        &--30 {
+            margin-top: rem(30);
+        }
+
+        @include r(1000) {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            visibility: visible;
         }
     }
 }
