--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -2740,6 +2740,46 @@ button {
   fill: #32407B;
 }
 
+.article-search {
+  display: block;
+  text-decoration: none;
+  -webkit-transition: 0.3s opacity;
+  transition: 0.3s opacity;
+}
+.article-search:hover {
+  opacity: 0.7;
+}
+.article-search__title {
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: #273366;
+}
+.article-search__caption {
+  font-size: 0.875rem;
+  margin-top: 0.75rem;
+  color: #4E5677;
+}
+.article-search__caption b {
+  font-weight: 700;
+}
+
+.article-search-preview {
+  display: block;
+  line-height: 1.5;
+  font-size: 0.875rem;
+  color: #4E5677;
+  text-decoration: none;
+  padding: 0.375rem 1rem;
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
+}
+.article-search-preview b {
+  font-weight: 700;
+}
+.article-search-preview:hover {
+  background-color: #F1F1FA;
+}
+
 .article-service {
   width: 100%;
   height: 100%;
@@ -4063,6 +4103,178 @@ button.nav__link {
           transform: scale(0);
   -webkit-transform-origin: left top;
           transform-origin: left top;
+  background-color: #273366;
+}
+
+.search {
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  position: relative;
+}
+@media only screen and (max-width: 1300px) {
+  .search.active {
+    -webkit-transform: translateX(5.75rem);
+            transform: translateX(5.75rem);
+  }
+}
+.search.active .search__field {
+  opacity: 1;
+  max-width: 100%;
+  background-color: #F1F1FA;
+  border: 1px solid #DFDFF2;
+}
+.search.active .search__button {
+  max-width: 2.375rem;
+}
+.search__form {
+  top: 0;
+  right: 0;
+  height: 100%;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: absolute;
+  -webkit-transform: translateX(0.25rem);
+          transform: translateX(0.25rem);
+}
+.search__field {
+  opacity: 0;
+  height: 100%;
+  max-width: 0;
+  border: none;
+  outline: none;
+  display: block;
+  width: 26.25rem;
+  margin-right: 0;
+  overflow: hidden;
+  font-weight: 400;
+  margin-left: auto;
+  font-size: 0.75rem;
+  color: #4E5677;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+  text-overflow: ellipsis;
+  padding: 0 3.125rem 0 0.75rem;
+}
+@media only screen and (max-width: 1300px) {
+  .search__field {
+    width: 19.625rem;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .search__field {
+    width: 27.625rem;
+  }
+}
+.search__button {
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  border: none;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 2.375rem;
+  cursor: pointer;
+  background: none;
+  max-width: 2.375rem;
+  position: absolute;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+  text-decoration: none;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.search__button:hover {
+  background-color: #E6E6F5;
+}
+.search__icon {
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: #273366;
+}
+@media only screen and (max-width: 700px) {
+  .search__icon {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+.search__list {
+  left: 0;
+  right: 0;
+  position: absolute;
+  top: calc(100% + 6px);
+}
+
+.search-list {
+  opacity: 1;
+  display: block;
+  padding-top: 0.5rem;
+  visibility: visible;
+  border-radius: 0.125rem;
+  -webkit-transition: 0.3s opacity;
+  transition: 0.3s opacity;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
+          box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
+}
+.search-list[hidden] {
+  opacity: 0;
+  display: none;
+  visibility: hidden;
+}
+.search-list__content {
+  overflow-y: auto;
+  max-height: 25.5rem;
+}
+.search-list__content::-webkit-scrollbar {
+  width: 0.875rem;
+  border-radius: 0.125rem;
+}
+.search-list__content::-webkit-scrollbar-track {
+  background: none;
+}
+.search-list__content::-webkit-scrollbar-thumb {
+  border-radius: 0.75rem;
+  border: 6px solid #FFFFFF;
+  background-color: #C5CADC;
+}
+.search-list__button {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: #FFFFFF;
+  min-height: 3rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
+  background-color: #32407B;
+}
+.search-list__button:hover {
   background-color: #273366;
 }
 
