--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -5,6 +5,7 @@
 @import "article-search";
 @import "article-search-preview";
 @import "article-service";
+@import "article-step";
 @import "button-head";
 @import "body";
 @import "breadcrumbs";
@@ -25,6 +26,7 @@
 @import "main";
 @import "nav";
 @import "nav-slider";
+@import "process";
 @import "progressbar";
 @import "search";
 @import "search-list";
