--- a/src/styles/blocks/columns.scss
+++ b/src/styles/blocks/columns.scss
@@ -34,6 +34,10 @@
         }
     }
 
+    &--steps {
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    }
+
     &--projects-grid {
         .columns__col {
             min-height: rem(400);
