--- a/src/includes/section-header.html
+++ b/src/includes/section-header.html
@@ -111,7 +111,7 @@
             <a class="link-head mob-hide" href="tel:+74012306200">
                 +7 4012 30 62 00
             </a>
-            <div class="search active" data-search>
+            <div class="search" data-search>
                 <form class="search__form" data-search-form>
                     <input class="search__field" data-search-field type="text">
                     <button class="search__button" data-search-button type="button">
@@ -168,11 +168,6 @@
                     </div>
                 </form>
             </div>
-            <!--            <button class="button-head mob-hide">-->
-            <!--                <svg class="button-head__icon">-->
-            <!--                    <use xlink:href="./assets/sprite/sprite.svg#icon-search"></use>-->
-            <!--                </svg>-->
-            <!--            </button>-->
             <button class="button-head mob-hide">
                 <svg class="button-head__icon">
                     <use xlink:href="./assets/sprite/sprite.svg#icon-person"></use>
